<resources>
    <string name="app_name">NMedia</string>
    <string name="greeting">NMedia!</string>
    <string name="avatar_description">Author avatar</string>
    <string name="remove">Remove</string>
    <string name="post_text">Post text</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="edit_message">Edit message</string>
    <string name="like">Like</string>
    <string name="share">Share</string>
    <string name="menu">Menu</string>
    <string name="description_post_save">Post save</string>
    <string name="add_post">Add post</string>
</resources>