<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/postsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/clearEditTopBarrier"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="-38dp"
        tools:listitem="@layout/post_list_item" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/toolsTopBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="contentEditText, saveButton" />

    <EditText
        android:id="@+id/contentEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="@string/post_text"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:padding="@dimen/common_spacing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/saveButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolsTopBarrier" />

    <ImageButton
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/avatar_description"
        android:padding="@dimen/common_spacing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/contentEditText"
        app:layout_constraintTop_toTopOf="@id/contentEditText"
        app:srcCompat="@drawable/ic_add_24dp" />





    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        app:constraint_referenced_ids="cancel, editIcon, editMessage, editMessageText" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/clearEditTopBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="cancel" />

    <ImageView
        android:id="@+id/editIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/common_spacing"
        app:layout_constraintBottom_toTopOf="@id/toolsTopBarrier"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_edit_24dp"
        tools:ignore="ContentDescription" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/editMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/icon_margin"
        android:textColor="#50B4E6"
        android:text="@string/edit_message"
        app:layout_constraintBottom_toTopOf="@id/editMessageText"
        app:layout_constraintStart_toEndOf="@id/editIcon"
        app:layout_constraintTop_toTopOf="@id/clearEditTopBarrier" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/editMessageText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/icon_margin"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="@id/toolsTopBarrier"
        app:layout_constraintEnd_toStartOf="@id/cancel"
        app:layout_constraintStart_toEndOf="@id/editIcon"
        app:layout_constraintTop_toBottomOf="@id/editMessage" />

    <ImageButton
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/cancel"
        android:padding="@dimen/common_spacing"
        app:layout_constraintBottom_toTopOf="@id/toolsTopBarrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_clear_24dp" />
</androidx.constraintlayout.widget.ConstraintLayout>